--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,12 @@ JWT_EXPIRES_IN=1d
 
 # File Upload Configuration
 UPLOAD_DIR=uploads
+
+# Mail Configuration
+SMTP_HOST=your_smtp_host
+SMTP_PORT=your_smtp_port
+SMTP_USER=your_smtp_username
+SMTP_PASSWORD=your_smtp_password
+FROM_NAME=Advocate Management System
+FROM_EMAIL=noreply@yourdomain.com
+SMTP_SERVICE=gmail
