--- a/package.json
+++ b/package.json
@@ -10,18 +10,22 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^2.2.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "ejs": "^3.1.10",
+    "express": "^4.21.2",
     "express-validator": "^7.0.1",
     "fs-extra": "^11.3.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
+    "number-to-words": "^1.2.4",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
+    "puppeteer": "^24.10.0",
     "sequelize": "^6.35.2",
     "uuid": "^9.0.1"
   },
