--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "pg-hstore": "^2.3.4",
     "puppeteer": "^24.10.0",
     "sequelize": "^6.35.2",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "node-cron": "4.1.0"
   },
   "devDependencies": {
     "jest": "^29.7.0",
