--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
     "fs-extra": "^11.3.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "4.1.0",
     "nodemailer": "^6.9.7",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "puppeteer": "^24.10.0",
     "sequelize": "^6.35.2",
-    "uuid": "^9.0.1",
-    "node-cron": "4.1.0"
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "jest": "^29.7.0",
