fixed backend and added routes

--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,5 @@ SMTP_PASSWORD=your_smtp_password
 FROM_NAME=Advocate Management System
 FROM_EMAIL=noreply@yourdomain.com
 SMTP_SERVICE=gmail
+
+FRONTEND_URL=http://150.241.247.100:5000
