--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.10",
+    "exceljs": "^4.4.0",
     "express": "^4.21.2",
     "express-validator": "^7.0.1",
     "fs-extra": "^11.3.0",
