feat(call): add Alohaa call integration with phone number management

--- a/.env.example
+++ b/.env.example
@@ -26,3 +26,6 @@ FROM_EMAIL=noreply@yourdomain.com
 SMTP_SERVICE=gmail
 
 FRONTEND_URL=http://150.241.247.100:5000
+
+# Alohaa Call API Configuration
+ALOHAA_API_KEY=your_alohaa_api_key_here
